nvidia_gpu_stats/vendor/darling/tests/compile-fail/word_on_wrong_variant_type.rs
use darling::FromMeta;

#[derive(FromMeta)]
enum Meta {
    Unit,
    #[darling(word)]
    NotUnit(String)
}

fn main() {}
